force-app/main/default/objects/AR_Client__c/AR_Client__c.object-meta.xml
<CustomObject>
    <label>AR_Client</label>
    <nameField>
        <label>AR_Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR_Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>