force-app/main/default/objects/AR_Client__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the client active</description>
    <inlineHelpText>Is the client active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>