force-app/main/default/objects/AR_Client__c/fields/Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Email__c</fullName>
    <businessOwnerUser>mrinal.konda@autorabit.com.esdevorg</businessOwnerUser>
    <description>Email of the company</description>
    <label>Company Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>