force-app/main/default/objects/AR_Client__c/fields/Name_Of_Client__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Client__c</fullName>
    <label>Name Of Client</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>